
Salvage Interactions
Fixed - "Exploding Room" special can now pick (certain) Industrial Evolution items again

Consumable Items
Fixed - Crash when tech locator tries to point to a system that has no hyperspace anchor (ICE again...)

Minefields
Added - Tooltip showing controlling entity
Fixed - Damage halved and now scales with fleet size up to (hit chance is still fleet size and speed)

Items
Fixed - Planet "in Range" tooltip no longer incorrectly states 12 LY range restriction for hypertransmitter (it's infinite as intended)

Restoration Docks
Fixed - Broken Tooltips

Requisitions center
Fixed - Broken Tooltips

Engineering Hub
"Fixed" - Crash when Variant is null (I don't know why it does that and the fix is a bandaid.)

World Wonders
Fixed - Dark Palace "Ressource" typo

Ancient Laboratory
Added - Now supports switching the bonus commodity when a beta core is installed

3.2.c
Privateer Base
Added - Small interaction with Substance.Abuse
Added - Setting to auto-deliver to gathering point (reverting the change below)
Adjusted - Now delivers loot to local storage (use a courier port to transfer it.)

Items
Fixed - Transpoofer no longer causes faction change to get stuck when undocking

Salvage Yards
Fixed - Salvage Yard crash incompatibility with the ICE mod

3.2.b
Variable Assembler
Fixed - AI Core Tooltips

Artillery
Fixed - Crash when Railgun is shooting

3.2.a
General
Adjusted - Complete code restructuring

Techmining
Removed - Techmining progress indicator (Download Better Colonies instead!)
Removed - Vanilla techmining override

Items
Adjusted - Chance for patrols to ignore the Sensor Decoy reduced to 10% (from 30%)
Fixed - Transpoofer no longer causes you to fight your own fleet when engaging a station while it is active

Supercomputer
Fixed - Crash if colony does not have primary entity

World Symbols
Fixed - No longer applies stability bonus to planet when hovering over build menu